# data-extraction-tool

./: .bmad_discovered_inputs.json  .gitignore  .pre-commit-config.yaml  .python-version  .scanignore  =3.7.0  =6.0.0  AGENTS.md  CLAUDE.md  GEMINI.md  MANIFEST.in  README.md  TRASH-AUDIT-REPORT.md  TRASH-FILES.md  cli_test_results.txt  config.yaml.example  coverage.json  profile.stats  pyproject.toml  pytest.ini  setup.py  test_output_full.txt
.claude/: CLAUDE.md  HOOKS-SETUP.md  settings.json  settings.local.json  subagent-tea-epic3-ref.md  subagent-tea-p1-fixes-ref.md
.claude/hooks/: bash_grep_check.py  bash_hook.py  file_size_conditional_hook.py  format_python_hook.py  markdown_info_hook.py  posttask_subtask_flag.py  pretask_subtask_flag.py  test_all_hooks.py  test_hooks.py  user_prompt_grep_reminder.py  venv_activator.sh
.github/workflows/: test.yml  (+3 more)
TRASH/: 3-2-test-context-template.xml  docs-descriptions.json  sample_output.txt  story-review-append.txt  test_dict.py  test_entity_normalizer.py  test_output_custom.txt  test_output_with_metadata.txt  test_validation_deskew_temp.py
docs/: COMPLETE_PARAMETER_REFERENCE.md  CONFIG_GUIDE.md  ERROR_HANDLING_GUIDE.md  INFRASTRUCTURE_INTEGRATION_GUIDE.md  LOGGING_GUIDE.md  PILOT_DISTRIBUTION_README.md  QUICKSTART.md  TESTING-README.md  USER_GUIDE.md  architecture-refactoring-scan-security.md  architecture.md  atdd-checklist-3.4.md  atdd-checklist-3.5.md  atdd-checklist-3.6.md  atdd-checklist-3.7.md  audit-report-build-test-context-2025-11-13.md  audit-report-create-test-cases-2025-11-13.md  audit-report-execute-tests-2025-11-13.md  audit-report-review-uat-results-2025-11-13.md  automation-guide.md  automation-summary-epic-4-prep.md  automation-summary-story-3.7.md  automation-summary.md  backlog.md  bmm-index.md  bmm-pipeline-integration-guide.md  bmm-project-overview.md  bmm-source-tree-analysis.md  bmm-workflow-status.yaml  brainstorming-session-results-2025-11-07.md  brownfield-test-triage.md  ci-cd-infrastructure-analysis.md  ci-cd-pipeline.md  cli-entry-points-analysis.md  cli-test-triage-report.md  code-review-2025-11-18-claude-md.md  config-management-analysis.md  csv-format-reference.md  development-automation-strategy.md  development-operations-guide-2025-11-13.md  (+45 more)
examples/: README.md  docx_extractor_example.py  docx_with_logging.py  excel_extractor_example.py  formatter_examples.py  logging_example.py  minimal_extractor.py  minimal_processor.py  pdf_extractor_example.py  pptx_extractor_example.py  processor_pipeline_example.py  sample_input.json  sample_input.txt  simple_pipeline.py
scripts/: PRUNING-SUMMARY.md  TRASH-FILES.md  audit_dependencies.py  build_package.bat  check_package_contents.py  create_dev_package.sh  create_performance_batch.py  fix_import_paths.py  generate_docs.py  generate_fixtures.py  generate_large_excel_fixture.py  generate_scanned_pdf_fixture.py  generate_story_template.py  generate_tests.py  init_claude_session.py  manage_sprint_status.py  measure_progress_overhead.py  profile_pipeline.py  regenerate_gold_standard.py  run_performance_suite.py  run_quality_gates.py  run_quality_gates_windows.cmd  run_test_extractions.py  scan_security.py  setup_environment.py  smoke-test-semantic.py  smoke_test_semantic.py  test_dependency_hook.py  test_installation.py  test_progress_display.py  validate_installation.py  validate_performance.py
src/: README.md
tests/: COVERAGE_BASELINE.md  README.md  __init__.py  conftest.py  test_docx_extractor.py  test_fixtures_demo.py  test_poppler_config.py
(+1054 files in other folders)
